kubernetes/nostream-cache-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nostream-cache
  name: nostream-cache
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nostream-cache
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/nostream: "true"
        io.kompose.service: nostream-cache
    spec:
      containers:
        - args:
            - redis-server
            - --loglevel
            - warning
            - --requirepass
            - nostr_ts_relay
          image: redis:7.0.5-alpine3.16
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
                - '|'
                - grep
                - PONG
            failureThreshold: 5
            periodSeconds: 1
            timeoutSeconds: 5
          name: nostream-cache
          resources: {}
      restartPolicy: Always
status: {}
