kubernetes/nostream-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nostream-db
  name: nostream-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nostream-db
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.28.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/nostream: "true"
        io.kompose.service: nostream-db
    spec:
      containers:
        - args:
            - postgres
            - -c
            - config_file=/postgresql.conf
          image: postgres
          livenessProbe:
            exec:
              command:
                - pg_isready -U nostr_ts_relay
            failureThreshold: 5
            initialDelaySeconds: 360
            periodSeconds: 5
            timeoutSeconds: 5
          name: nostream-db
          resources: {}
      restartPolicy: Always
status: {}
