kubernetes/nostream-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: nostream
  name: nostream
spec:
  ports:
    - name: "8008"
      port: 8008
      targetPort: 8008
  selector:
    io.kompose.service: nostream
status:
  loadBalancer: {}
